--- a/hobbies.html
+++ b/hobbies.html
@@ -20,6 +20,7 @@
             </ul>
         </li>
         <li>Read technological news.</li>
+        <li>Design and implement logical digital circuits.</li>
         <li>Read books (currently reading 1984 by George Orwell).</li>
     </ul>
     <hr />
