--- a/hobbies.html
+++ b/hobbies.html
@@ -19,6 +19,7 @@
                 <li>Thinking of ways to implement technology as a solution to my homework (generally, math).</li>
             </ul>
         </li>
+        <li>Do exercise (physical workout or practice a sport).</li>
         <li>Read technological news.</li>
         <li>Design and implement logical digital circuits.</li>
         <li>Read books (currently reading 1984 by George Orwell).</li>
